[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/tileset/sci fi dark 1/1. main platforms.png" type="Texture" id=1]
[ext_resource path="res://src/objects/Button.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 18.4819, 17.5714 )

[node name="Button" type="StaticBody2D"]
collision_layer = 8
collision_mask = 2
script = ExtResource( 2 )

[node name="Red_Button" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 831.812, -0.620073, 31.4855, 32.5136 )

[node name="Green_Button" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 864.107, -0.792031, 31.4016, 32.6251 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
